# SynqThing

./: CMakeLists.txt  README.md  main.cpp  main.qml  qml.qrc
